static/css/styles.css
/* ... */
blockquote p {
  margin: 0;
}

blockquote p + p {
  margin-top: 1rem;
}




.wrapper {
  display: grid;
  grid-template-columns: repeat(6, minmax(0, 1fr));
  grid-column-gap: var(--base-grid-gap);
}



.header {
  margin-bottom: calc(var(--base-spacing) * 4);
}

@media (min-width: 50rem) {
  .header {
    margin-bottom: calc(var(--base-spacing) * 8);
  }
}

.header__nav {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: var(--base-spacing);
}

@media (min-width: 50rem) {
  /*
  .header__nav {
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-column-gap: var(--base-grid-gap);
    align-items: center;
    grid-template-columns: repeat(6, minmax(0, 1fr));
  }
  */
}

.logo {
  width: 3rem;
  height: 3rem;
  overflow: visible;
}

.nav__menu {
  list-style-type: none;
  margin: 0 var(--base-spacing) 0 0;
  padding: 0;
  grid-column: 6 / 7;
}

.nav__menu li a {
  text-decoration: none;
  font-weight: 600;
  color: #111;
  font-size: var(--base-font-size);
  line-height: 1.5;
  letter-spacing: 0.03rem;
}




/********************
 * Home
 */

.home {
  padding: 0 var(--base-spacing);
}

.home__intro, .music__content {
  font-size: var(--med-font-size);
  max-width: 50ch;
  margin-bottom: calc(var(--base-spacing) * 8);
}

@media (min-width: 50rem) {
  .home__intro, .music__content {
    font-size: var(--large-font-size);
  }
}

.home__intro p, .music__content p {
  line-height: 1.5;
}


.home__posts {
  margin-bottom: calc(var(--base-spacing) * 4);
}

.home__links {
  margin-bottom: calc(var(--base-spacing) * 4);
}

.recent-tracks {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.track {
  display: flex;
}

.track__img {
  flex: 1 1 40%;
}

.track__info {
  flex: 1 1 60%;
  font-size: var(--base-font-size);
  margin-left: var(--base-spacing);
}

.track__info p {
  margin: 0;
}

.recent-posts {
  list-style-type: none;
  margin: 0;
  padding: 0;
  display: grid;
  grid-template-columns: 1fr;
  grid-row-gap: calc(var(--base-grid-gap) * 2);
}

.post-card time {
  text-transform: uppercase;
  font-size: var(--small-font-size);
  font-weight: 600;
}

.post-card + .post-card {
  /*margin-top: var(--base-spacing);*/
}

@media (min-width: 50rem) {
  .recent-posts {
    grid-template-columns: repeat(3, minmax(0, 1fr));
    grid-column-gap: var(--base-grid-gap);
    justify-content: start;
  }

  .post-card + .post-card {
    margin-top: 0;
  }
}

#pinboard_linkroll {
  display: grid;
  grid-row-gap: var(--base-grid-gap);
}

.pin-item p {
  margin: 0;
}

#pinboard_linkroll .pin-tag {
  display: none;
}

@media (min-width: 50rem) {
  #pinboard_linkroll {
    grid-template-columns: repeat(4, 1fr);
    grid-column-gap: var(--base-grid-gap);
  }
}




/********************
 * Posts
 */

.post {
	margin-bottom: 4rem;
  grid-column: 1 / -1;
  display: grid;
  grid-template-columns: repeat(6, 1fr);
  grid-column-gap: var(--base-grid-gap);
}

.post__header {
  grid-column: 1 / -1;
	margin-bottom: 2rem;
}

.post__header h1 {
  padding: 0 var(--base-spacing);
}

@media (min-width: 50rem) {
  .post__header h1 {
    max-width: 20ch;
  }
}

.post__body {
  padding: 0 calc(var(--base-spacing) * 1.25);
  grid-column: 1 / -1;
}

.post__body figure {
	margin: 2rem 0 var(--base-spacing) 0;
}

.post__body code {
  background-color: #ccc;
  padding: 0.125rem;
  border-radius: 0.125rem;
}

.post__meta {
  margin-top: 3rem;
  margin-right: var(--base-spacing);
  grid-column: 1 / -1;
	text-align: right;
  color: #111;
}

.post__meta a {
  text-decoration: none;
  color: #111;
}

.post__meta time {
	font-size: var(--small-font-size);
	font-weight: 600;
	text-transform: uppercase;
}

.post__tags {
	list-style-type: none;
	font-size: var(--small-font-size);
	font-weight: 600;
	text-transform: uppercase;
	margin: 0.25rem 0 0 0;
	padding: 0;
	display: flex;
	align-items: center;
	justify-content: flex-end;
}

.post__tags li {
	margin-left: 0.5rem;
}

@media (min-width: 50rem) {
	.post__body {
		padding: 0;
    grid-column: 2 / 6;
	}
}



/********************
 * Journal List Template
 */

.journal-list {
  padding: 0 var(--base-spacing);
}

.post-list {
  list-style-type: none;
  padding: 0;
  margin: 0;
  display: grid;
  grid-template-columns: 1fr;
  grid-row-gap: calc(var(--base-grid-gap) * 2);
}

@media (min-width: 30rem) {
  .post-list {
    grid-template-columns: repeat(2, 1fr);
    grid-column-gap: var(--base-grid-gap);
  }
}

@media (min-width: 50rem) {
  .post-list {
    grid-template-columns: repeat(3, 1fr);
  }
}

.pagination {
  margin-top: calc(var(--base-spacing) * 4);
  text-align: right;
  font-size: var(--med-font-size);
}

.pagination a {
  text-decoration: none;
}

.pagination svg {
  fill: #000;
  width: 4rem;
  height: 4rem;
}

.pagination > * {
  margin-left: var(--base-spacing);
}




/********************
 * About
 */

.about-page {
  display: grid;
  grid-template-columns: repeat(6, minmax(0, 1fr));
  grid-gap: var(--base-grid-gap);
  padding: 0 var(--base-spacing);
}

.about__content {
  grid-column: 1 / -1;
}

.about__content h1 {
  margin-top: 0;
}

.about__sidebar {
  grid-column: 1 / 4;
}

.about__sidebar img {
  border-radius: 0.250rem;
}

@media (min-width: 50rem) {
  .about__content {
    grid-column: 1 / 5;
  }

  .about__sidebar {
    grid-column: 5 / 7;
  }

  .about__sidebar img {
    margin-bottom: calc(var(--base-spacing) * 2);
  }
}

.blog-roll {
  list-style-type: none;
  margin: 0;
  padding: 0;
}




/********************
 * Portfolio
 */

.portfolio-page {
  padding: 0 var(--base-spacing);
}

.portfolio__intro {
  font-size: var(--med-font-size);
  max-width: 50ch;
  margin-bottom: calc(var(--base-spacing) * 8);
}

.portfolio__intro p {
  line-height: 1.5;
}

/*
@media (min-width: 50rem) {
  .portfolio__intro {
    font-size: var(--large-font-size);
  }
}
*/

.projects {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.project + .project {
  margin-top: calc(var(--base-spacing) * 3);
}
/* ... */

